로더 실습 결과

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>검색</title>
     <!-- TODO: CSS 파일을 엔트리포인트(app.js)에서 로딩하세요. 
       웹팩에서 로딩할수 있도록 로더를 설정해야 합니다. -->
+      <script src="src/app.js"></script>
   </head>
   <body>
     <div id="app">
